--- a/notebooks/models/interaction_forces/KNN/KNN_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/KNN/KNN_hyperparameters_search.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "<IPython.utils.io.Tee at 0x7fa9b02a28e0>"
+       "<IPython.utils.io.Tee at 0x7fcfe87c8970>"
       ]
      },
      "execution_count": 2,
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "JOINT = 'Hip'\n",
+    "JOINT = 'Ankle'\n",
     "FORCE_CELLS_PER_JOINT = {\n",
     "    'Hip': [5, 6],\n",
     "    'Knee': [3, 4, 7, 8],\n",
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Hyperparameters search date\n",
-    "hs_date = '23082021'\n",
+    "hs_date = '24082021'\n",
     "\n",
     "# Parameters grid\n",
     "param_grid = {\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,6 @@
     "}\n",
     "\n",
     "cv_data_id = {\n",
-    "    '0010_09082021': 6,\n",
     "    '0011_09082021': 4,\n",
     "    '0012_09082021': 6,\n",
     "    '0013_09082021': 4,\n",
@@ -296,6 +295,13 @@
     "            del model, results, cv_results, rd\n",
     "            gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
