SVM hyperparameters search

--- a/notebooks/models/interaction_forces/SVM/SVM_hyperparameters_search.ipynb
+++ b/notebooks/models/interaction_forces/SVM/SVM_hyperparameters_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "gisSEwlud_Yn"
    },
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.utils.io.Tee at 0x7f01b82960a0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.utils.io import Tee\n",
     "\n",
@@ -327,6 +338,13 @@
     "            del model, results, cv_results, rd\n",
     "            gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
