Repo cleaning and refactoring

--- a/notebooks/aux/data_augmentation.ipynb
+++ b/notebooks/aux/data_augmentation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "legendary-harmony",
+   "id": "ongoing-suite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "searching-mexican",
+   "id": "sealed-bathroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "plastic-gasoline",
+   "id": "subtle-nurse",
    "metadata": {
     "scrolled": true
    },
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "material-protest",
+   "id": "hairy-baptist",
    "metadata": {},
    "outputs": [
     {
@@ -503,6 +503,7 @@
     }
    ],
    "source": [
+    "# Read sample data\n",
     "data_df = pd.read_csv(files[0] + '/force_cells_processed.csv')\n",
     "data_df"
    ]
@@ -510,17 +511,18 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "statewide-prime",
+   "id": "damaged-homeless",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select one sample signal\n",
     "original_signal = data_df['F3x'].values[:1000]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "collaborative-emission",
+   "id": "noble-belize",
    "metadata": {},
    "outputs": [
     {
@@ -547,10 +549,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "declared-riverside",
+   "id": "empirical-idaho",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compute some basic modifications of the original signal\n",
     "augmented_signal_1 = original_signal * 1.2\n",
     "augmented_signal_2 = original_signal - augmented_signal_1\n",
     "augmented_signal_3 = original_signal + augmented_signal_2\n",
@@ -560,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "composite-bolivia",
+   "id": "patent-lender",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "mighty-fleece",
+   "id": "willing-trinity",
    "metadata": {},
    "outputs": [
     {
@@ -609,6 +612,7 @@
     }
    ],
    "source": [
+    "# Compute and polt some modifications of the original signal \n",
     "plt.figure(figsize=(20,10))\n",
     "plt.plot(original_signal, label='Original')\n",
     "\n",
@@ -626,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-november",
+   "id": "underlying-professional",
    "metadata": {},
    "outputs": [],
    "source": []
